--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -2,7 +2,6 @@
 
 .header {
   width: 100vw;
-//   min-height: 1000px;
   background: url("../images/header-background.png");
   background-size: cover;
   background-position: top;
@@ -54,6 +53,7 @@
       a {
         font-size: 1rem;
         display: inline-block;
+        transition: all 0.3s ease-in-out;
       }
 
       a:hover {
@@ -101,26 +101,304 @@
         justify-content: center;
         align-items: center;
         > p {
-            font-size: 1em;
-            line-height: 1.5em;
-            width: 90%;
-            text-align: center;
-            margin: 0;
-
+          font-size: 1em;
+          line-height: 1.5em;
+          width: 90%;
+          text-align: center;
+          margin: 0;
         }
       }
 
-      > div:nth-child(2){
-        
+      // > div:nth-child(2) {
+      // }
+    }
+
+    > div:nth-child(5) {
+      width: 100%;
+      height: fit-content;
+      display: flex;
+      img {
+        width: 100%;
+        height: auto;
       }
     }
 
-    > div:nth-child(5){
-        width: 100%;
-        img{
-            width: 100%;
-            height: auto;
+    > .possibilities {
+      width: 100vw;
+      height: 200px;
+      background-color: #f9fbfd;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+
+      > p {
+        font-size: 2.6em;
+        font-weight: bold;
+
+        span {
+          color: #005ae2;
         }
+      }
+
+      > div {
+        width: 50%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        > div {
+          display: flex;
+          flex-direction: column;
+          h2 {
+            font-size: 1.8em;
+            width: 145px;
+          }
+
+          p {
+            font-size: 1em;
+            margin: 0;
+          }
+        }
+      }
+    }
+  }
+
+  .features {
+    display: flex;
+    width: 100%;
+    // height: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ffffff;
+    padding: 100px 0px;
+
+    > div {
+      height: 85%;
+      width: 85%;
+      display: flex;
+      justify-content: space-around;
+      // align-items: center;
+      > div:nth-child(1) {
+        width: 400px;
+        height: 100%;
+
+        > h2 {
+          font-size: 2.6em;
+          font-weight: bold;
+          margin: 0px auto 10px auto;
+          > span {
+            color: #005ae2;
+            position: relative;
+
+            &::after {
+              content: "";
+              position: absolute;
+              bottom: 0px;
+              left: -265px;
+              width: 5px;
+              height: 48px;
+              background-image: linear-gradient(
+                rgba(17, 34, 50, 1),
+                rgba(77, 107, 136, 0)
+              );
+            }
+          }
+        }
+
+        > p {
+          font-size: 1em;
+          line-height: 1.6em;
+          width: 93%;
+          margin-left: 15px;
+        }
+      }
+
+      > div:nth-child(2) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 30px;
+        row-gap: 40px;
+        margin-left: 50px;
+
+        > div {
+          max-width: 340px;
+          h2 {
+            font-size: 1.8em;
+            line-height: 1.2em;
+            letter-spacing: 1px;
+          }
+
+          p {
+            font-size: 1em;
+            line-height: 1.4em;
+          }
+        }
+      }
+    }
+  }
+
+  .pricing {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    min-height: 600px;
+    background-color: #ffffff;
+
+    > div:nth-child(1) {
+      max-width: 575px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      > h2 {
+        font-size: 2.6em;
+        font-weight: bold;
+        text-align: center;
+        margin-bottom: 6px;
+        span {
+          color: #005ae2;
+          position: relative;
+
+          &::after {
+            content: "";
+            position: absolute;
+            bottom: -4px;
+            left: -60px;
+            width: 5px;
+            height: 50px;
+            background-image: linear-gradient(
+              rgba(17, 34, 50, 1),
+              rgba(77, 107, 136, 0)
+            );
+          }
+        }
+      }
+      > p {
+        font-size: 1em;
+        line-height: 1.4em;
+        text-align: center;
+        margin: 0;
+      }
+    }
+
+    > div:nth-child(2) {
+      display: flex;
+      align-items: center;
+      margin-top: 70px;
+      > div {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        > div {
+          display: flex;
+          flex-direction: column;
+          width: fit-content;
+
+          h3,
+          h2,
+          ul {
+            width: fit-content;
+          }
+
+          h3:nth-child(1) {
+            font-size: 1.6em;
+            font-weight: 400;
+            margin: 0px 0px 35px 0px;
+          }
+
+          h2 {
+            font-size: 2.7em;
+            font-weight: bold;
+            margin: 0px 0px 10px 0px;
+          }
+
+          h3:nth-child(3) {
+            font-size: 1.2em;
+            font-weight: 400;
+            margin: 0px 0px 16px 0px;
+          }
+
+          ul {
+            list-style: none;
+            padding: 0;
+            font-size: 0.9em;
+            line-height: 2.6em;
+            li {
+              img {
+                margin-right: 10px;
+              }
+            }
+          }
+        }
+      }
+      > div:nth-child(1) {
+        width: 340px;
+        height: 455px;
+        border-radius: 12px 0px 0px 12px;
+        border: 0.4px solid #005ae2;
+        border-right: none;
+      }
+      > div:nth-child(3) {
+        width: 340px;
+        height: 455px;
+        border-radius: 0px 12px 12px 0px;
+        border: 0.4px solid #005ae2;
+        border-left: none;
+      }
+
+      > div:nth-child(2) {
+        width: 410px;
+        height: 630px;
+        background: linear-gradient(
+          180deg,
+          #1e3448 99.99%,
+          rgba(30, 52, 72, 0) 100%
+        );
+        border-radius: 12px;
+        color: white;
+      }
+    }
+
+    > .pricing__buttons {
+      width: 100%;
+      margin-top: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 50px;
+
+      a {
+        text-decoration: none;
+        color: #005ae2;
+        font-size: 1em;
+        padding: 1.1em 1.8em;
+        border: 1px solid #0065fe;
+        border-radius: 100px;
+        transition: all 0.3s ease-in-out;
+      }
+
+      a:nth-child(1) {
+        margin-right: 20px;
+      }
+
+      a:hover {
+        background-color: #005ae2f0;
+        color: white;
+        transform: scale(1.03);
+      }
+
+      a:nth-child(2) {
+        background-color: #005ae2;
+        color: white;
+      }
+
+      a:nth-child(2):hover {
+        background-color: #ffffff;
+        color: #005ae2f0;
+        transform: scale(1.03);
+      }
     }
   }
 }
