finished home page design

--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -1,4 +1,4 @@
-@import url('../font.scss');
+@import url("../font.scss");
 
 .footer {
   background-image: url("../images/footer-background.png");
@@ -13,8 +13,9 @@
   padding-top: 70px;
   padding-bottom: 30px;
   font-family: "Gilroy Medium", sans-serif;
+  font-size: 16px;
 
-  > div:nth-child(1){
+  > div:nth-child(1) {
     display: flex;
     justify-content: space-between;
     width: 80%;
@@ -22,48 +23,46 @@
     min-height: 400px;
     margin-bottom: 20px;
 
-    > .socials{
+    > .socials {
       display: flex;
       flex-direction: column;
       margin-right: 70px;
-      > div:nth-child(1){
+      > div:nth-child(1) {
         margin-bottom: 30px;
       }
 
-      > div:nth-child(2){
+      > div:nth-child(2) {
         display: flex;
         justify-content: space-between;
 
-        i{
+        i {
           font-size: 20px;
         }
       }
     }
 
-    > .grid-footer{
+    > .grid-footer {
       width: 100%;
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       // grid-template-rows: 1fr 1fr;
       grid-column-gap: 10px;
-      
 
-      div{
+      div {
         display: flex;
         flex-direction: column;
-        width: 150px;
+        width: 9.5em;
 
-        h3{
+        h3 {
           margin: 0px 0px 6px 0px;
           font-size: 1em;
           font-weight: bold;
-
         }
-        ul{
+        ul {
           padding: 0;
           list-style: none;
           margin: 0;
-          li{
+          li {
             padding: 5px 0px;
             font-size: 1em;
           }
@@ -79,5 +78,52 @@
     display: flex;
     width: 80%;
     font-size: 0.9em;
+  }
+}
+
+@media (max-width: 970px) {
+  .footer {
+    font-size: 14px;
+    > div:nth-child(1) {
+      flex-direction: column;
+      > .socials {
+        margin: 0;
+        margin-bottom: 20px;
+
+        > div:nth-child(1) {
+          margin-bottom: 10px;
+        }
+        > div:nth-child(2) {
+          width: 20%;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 765px) {
+
+  .footer{
+    div:nth-child(1){
+      > .grid-footer{
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-row-gap: 10px;
+      }
+    }
+  }
+}
+
+@media (max-width: 765px) {
+
+  .footer{
+    font-size: 10px;
+
+    > div:nth-child(1){
+      > .socials{
+        >div:nth-child(2){
+          width: 35%;
+        }
+      }
+    }
   }
 }
