--- a/src/Components/Analytics/analytics.scss
+++ b/src/Components/Analytics/analytics.scss
@@ -1,6 +1,6 @@
 .analytics__container {
   width: 100%;
-  height: 500px;
+  height: 31.5em;
   background-image: url("../images/analytics-background.png");
   background-position: center;
   background-size: cover;
@@ -9,8 +9,8 @@
   align-items: center;
 
   > form {
-    width: 480px;
-    min-height: 350px;
+    width: 30em;
+    min-height: 22em;
     background-color: #ffffff;
     border: 1px solid rgba(255, 255, 255, 0.5);
     box-shadow: 0px 4px 8px rgba(100, 162, 255, 0.18);
@@ -31,7 +31,7 @@
         font-size: 0.85em;
         padding: 0px 1em;
         width: calc(100% - 2em);
-        height: 55px;
+        height: 3.5em;
         color: #3284ff;
         margin-bottom: 1.5em;
       }
@@ -76,7 +76,7 @@
           font-size: 0.85em;
           padding: 0px 1em;
           width: calc(50% - 2em);
-          height: 55px;
+          height: 3.5em;
           color: #3284ff;
           appearance: none;
           -webkit-appearance: none;
@@ -103,22 +103,45 @@
         border-radius: 100px;
         border: 0px;
         color: #ffffff;
+        font-size: 0.9em;
 
-        img{
+        img {
           margin-left: 5px;
         }
       }
     }
 
-    > p{
-        width: 85%;
-        font-size: 0.8em;
-        a{
-            font-weight: bold;
-        }
-        a:hover{
-            text-decoration: underline;
-        }
+    > p {
+      width: 85%;
+      font-size: 0.8em;
+      a {
+        font-weight: bold;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
+
+@media (max-width: 1140px) {
+
+  .analytics__container{
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 760px) {
+
+  .analytics__container{
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 420px) {
+
+  .analytics__container{
+    font-size: 10px;
+  }
+}
+
