--- a/src/Components/FAQ/faq.scss
+++ b/src/Components/FAQ/faq.scss
@@ -2,7 +2,6 @@
 
 .faq__container {
   width: 100%;
-  // min-height: 1300px;
   background-image: url("../images/faq-background.png");
   background-position: left stacenter;
   background-size: cover;
@@ -10,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   font-family: "Gilroy Medium", sans-serif;
+  font-size: 16px;
 
   > h2 {
     font-size: 2.6em;
@@ -22,7 +22,7 @@
       bottom: 0px;
       left: -20px;
       width: 5px;
-      height: 48px;
+      height: 1.3em;
       background-image: linear-gradient(
         rgba(17, 34, 50, 1),
         rgba(77, 107, 136, 0)
@@ -32,7 +32,7 @@
 
   .faq__body {
     margin-top: 20px;
-    margin-bottom: 160px;
+    margin-bottom: 10em;
     width: 55%;
     color: #141414;
 
@@ -44,7 +44,7 @@
         align-items: center;
 
         .question {
-          font-size: 20px;
+          font-size: 1.35em;
           line-height: 2em;
           margin: 1.1em 0px 0.6em 0px;
           font-weight: 400;
@@ -75,7 +75,7 @@
 
   > div:nth-child(3) {
     width: 100%;
-    height: 300px;
+    height: 18.8em;
     background-image: url("../images/background.png");
     background-size: cover;
     background-repeat: no-repeat;
@@ -98,7 +98,7 @@
       font-size: 1em;
       padding: 1.1em 3.5em;
       color: #fff;
-      margin-top: 10px;
+      margin-top: 0.7em;
     }
 
     > a:hover{
@@ -107,3 +107,29 @@
     }
   }
 }
+
+@media (max-width: 1140px) {
+
+  .faq__container{
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 760px) {
+
+  .faq__container{
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 420px) {
+
+  .faq__container{
+    font-size: 10px;
+
+    .faq__body{
+      width: 80%;
+    }
+  }
+}
+
