--- a/src/Components/navbar/navbar.scss
+++ b/src/Components/navbar/navbar.scss
@@ -1,4 +1,4 @@
-@import url('../font.scss');
+@import url("../font.scss");
 
 .navbar {
   width: 100vw;
@@ -6,7 +6,14 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  font-family: 'Gilroy Medium', sans-serif;
+  font-family: "Gilroy Medium", sans-serif;
+  flex-wrap: wrap;
+
+  #toggler,
+  label {
+    display: none;
+    margin-right: 20px;
+  }
 
   .navbar__links {
     width: 80%;
@@ -15,7 +22,7 @@
     justify-content: space-around;
     // background-color: red;
 
-    a{
+    a {
       color: black;
       text-decoration: none;
     }
@@ -42,22 +49,22 @@
     }
 
     ul:nth-child(1) > li:nth-child(1),
-    ul:nth-child(2)  li:nth-child(1),
-    ul:nth-child(2)  li:nth-child(2) {
+    ul:nth-child(2) li:nth-child(1),
+    ul:nth-child(2) li:nth-child(2) {
       color: #0065fe;
     }
 
-    ul:nth-child(2)  li:nth-child(2) {
+    ul:nth-child(2) li:nth-child(2) {
       border: 1px solid #0065fe;
       border-radius: 100px;
     }
 
-    ul:nth-child(2)  li:nth-child(2):hover {
+    ul:nth-child(2) li:nth-child(2):hover {
       background-color: #0065fe;
       color: #ffffff;
     }
 
-    ul:nth-child(2)  li:nth-child(3) {
+    ul:nth-child(2) li:nth-child(3) {
       border-radius: 100px;
       background-color: #0065fe;
       color: white;
@@ -67,7 +74,82 @@
     ul li:hover {
       transform: scale(1.05);
       cursor: pointer;
-      
+    }
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .navbar {
+    justify-content: space-between;
+
+    .navbar__logo {
+      justify-self: flex-start;
+      height: 100px;
+      display: flex;
+      align-items: center;
+      padding-left: 20px;
+    }
+
+    #toggler:checked ~ .navbar__links {
+      display: flex;
+      opacity: 1;
+      animation: slideDown 1.1s ease-in-out;
+    }
+
+    label {
+      display: inline-flex;
+    }
+
+    .navbar__links {
+      display: none;
+      overflow: hidden;
+      align-self: flex-start;
+      z-index: 10;
+      width: 100%;
+      background-color: #e5e5e5;
+      flex-direction: column;
+      align-items: flex-start;
+      opacity: 0;
+      transition: opacity 0.3s ease-in-out;
+
+      ul {
+        flex-direction: column;
+        padding-left: 60px;
+        align-items: flex-start;
+        li {
+          padding-left: 0;
+        }
+      }
+
+      ul:nth-child(1) {
+        margin-top: 20px;
+      }
+
+      ul:nth-child(2) {
+        margin-bottom: 30px;
+        li {
+          padding-left: 1.6em;
+        }
+
+        li:nth-child(1) {
+          padding-left: 0;
+        }
+
+        li:nth-child(3) {
+          margin-left: 0;
+          margin-top: 0.8em;
+        }
+      }
+    }
+  }
+
+  @keyframes slideDown {
+    0% {
+      transform: translateY(-50px);
+    }
+
+    100% {
+      transform: translateY(0);
     }
   }
 }
