--- a/src/Components/font.scss
+++ b/src/Components/font.scss
@@ -4,3 +4,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url("./images/Proxima\ Nova\ Font.otf") format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
