done with login and signup sections

--- a/src/Components/Analytics/analytics.scss
+++ b/src/Components/Analytics/analytics.scss
@@ -32,7 +32,7 @@
         padding: 0px 1em;
         width: calc(100% - 2em);
         height: 3.5em;
-        color: #3284ff;
+        color: rgb(23, 23, 23);
         margin-bottom: 1.5em;
       }
 
