--- a/src/Components/navbar/navbar.scss
+++ b/src/Components/navbar/navbar.scss
@@ -64,7 +64,7 @@
       color: #ffffff;
     }
 
-    ul:nth-child(2) li:nth-child(3) {
+    ul:nth-child(2) a:nth-child(3) li {
       border-radius: 100px;
       background-color: #0065fe;
       color: white;
