--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -4,7 +4,7 @@
   width: 100vw;
   background: url("../images/header-background.png");
   background-size: cover;
-  background-position: top;
+  background-position: bottom right;
   display: flex;
   flex-direction: column;
   font-family: "Gilroy Medium", sans-serif;
@@ -169,7 +169,7 @@
     align-items: center;
     justify-content: center;
     background: #ffffff;
-    padding: 100px 0px;
+    padding: 6.25em 0px;
 
     > div {
       height: 85%;
@@ -284,7 +284,7 @@
     > div:nth-child(2) {
       display: flex;
       align-items: center;
-      margin-top: 70px;
+      margin-top: 4.4em;
       > div {
         display: flex;
         flex-direction: column;
@@ -531,6 +531,9 @@
           }
         }
       }
+       > p{
+        width: 90%;
+       }
 
       > .possibilities {
         > div {
@@ -541,6 +544,14 @@
               width: fit-content;
             }
           }
+        }
+      }
+    }
+
+    .pricing{
+      > div:nth-child(1){
+        > h2{
+          margin-top: 0px;
         }
       }
     }
