--- a/src/Components/SignIn/signin.scss
+++ b/src/Components/SignIn/signin.scss
@@ -34,6 +34,10 @@
         width: 100%;
       }
 
+      label{
+        display: none;
+      }
+
       > .signin__password {
         width: 100%;
         height: fit-content;
