--- a/src/Components/Signup/signup.scss
+++ b/src/Components/Signup/signup.scss
@@ -36,6 +36,10 @@
         width: 100%;
       }
 
+      label{
+        display: none;
+      }
+
       > .password__signup {
         width: 100%;
         height: fit-content;
