--- a/src/Components/Signup/signup.scss
+++ b/src/Components/Signup/signup.scss
@@ -32,11 +32,11 @@
       align-items: center;
       justify-content: center;
 
-      .error{
+      .error {
         width: 100%;
       }
 
-      label{
+      label {
         display: none;
       }
 
@@ -85,6 +85,19 @@
         font-weight: 500;
         font-size: 1em;
 
+        .loader {
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          display: block;
+          margin: auto;
+          position: relative;
+          color: red;
+          left: -100px;
+          box-sizing: border-box;
+          animation: shadowRolling 2s linear infinite;
+        }
+
         &:hover {
           transform: scale(1.01);
         }
@@ -115,6 +128,44 @@
         color: #005ae2bd;
       }
     }
+  }
+}
+
+@keyframes shadowRolling {
+  0% {
+    box-shadow: 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
+  }
+  12% {
+    box-shadow: 100px 0 white, 0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
+  }
+  25% {
+    box-shadow: 110px 0 white, 100px 0 white, 0px 0 rgba(255, 255, 255, 0),
+      0px 0 rgba(255, 255, 255, 0);
+  }
+  36% {
+    box-shadow: 120px 0 white, 110px 0 white, 100px 0 white,
+      0px 0 rgba(255, 255, 255, 0);
+  }
+  50% {
+    box-shadow: 130px 0 white, 120px 0 white, 110px 0 white, 100px 0 white;
+  }
+  62% {
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 130px 0 white, 120px 0 white,
+      110px 0 white;
+  }
+  75% {
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0),
+      130px 0 white, 120px 0 white;
+  }
+  87% {
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0),
+      200px 0 rgba(255, 255, 255, 0), 130px 0 white;
+  }
+  100% {
+    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0),
+      200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0);
   }
 }
 
